2000-04-14  Michael Sokolov  <msokolov@ivan.Harhan.ORG>

	* arlex.l: Add directives to increase lex buffer size.

	* objdump.c, readelf.c: Don't include strarg.h or varargs.h. They are
        already included by bucomm.h.

2000-04-10  Philippe De Muyter  <phdm@macqel.be>

	* readelf (dynamic_segment_mips_val): Call `sprintf', not
	`strftime' since strftime is not available on all systems.
	(process_mips_specific): Ditto.

Fri Apr  7 15:56:57 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
	* configure.in (WARN_CFLAGS): Set to -W -Wall by default.  Add
 	--enable-build-warnings option.
	* Makefile.am (AM_CFLAGS, WARN_CFLAGS): Add definitions.
	* Makefile.in, configure: Re-generate.

2000-04-06  Alan Modra  <alan@linuxcare.com.au>

	* addr2line.c: Update copyright.
	* objcopy.1: Likewise, and title.
	* strings.1: Likewise.

	* version.c (print_version): Add 2000.

	* rddbg.c (read_section_stabs_debugging_info): Don't use
	bfd_size_type for strx to avoid printf problems if BFD64.

	* bucomm.c: (report): Remove `static'.
	Move inclusion of stdarg.h/vararg.h from here.
	* bucomm.h: To here.
	(CONST): Change all occurences to const.
	(report): Declare it.
	(bfd_fatal): Add ATTRIBUTE_NORETURN.
	(fatal): Add ATTRIBUTE_PRINTF_1 ATTRIBUTE_NORETURN.
	(non_fatal): Add ATTRIBUTE_PRINTF_1.

	* ar.c (main): Use fatal or non_fatal instead of fprintf.
	Correct a typo in an error message.
	(do_quick_append): Use non_fatal instead of fprintf.
	(move_members): Use fatal instead of fprintf, exit.
	* coffdump.c (main): Same here.

	* dlltool.c (display): Delete.
	(warn): Delete.
	(inform): Use `report' instead of `display'.
	(rvaafter): Remove trailing \n from fatal error msg.
	(rvabefore): Ditto.
	(asm_prefix): Ditto.
	(yyerror): Replace `warn' with `non_fatal', and remove \n.
	(def_name): Likewise.
	(run): Likewise.
	(scan_all_symbols): Likewise.
	(gen_lib_file): Likewise.
	(def_library): Likewise.  Remove extra program_name too.
	(run): Remove \n from inform strings.